[package]
name = "enki-tauri"
version = "0.1.0"
description = "A ChatGPT Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.2", features = [] }

[dependencies]
base64 = { version = "0.21.0" }
comrak = { version = "0.16.0", default=false, features= ["syntect", "shortcodes", "emojis"] }
futures = { version = "0.3.26" }
image = { version = "0.24.5" }
reqwest = { version = "0.11.14", features = ["json", "socks", "multipart", "mime_guess"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enki-shared = { path = "../src-shared" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "time", "json"] }
tauri = { version = "2.0.0-alpha.4", features = ["clipboard-all", "dialog-all", "fs-all", "path-all", "protocol-asset"] }
tokio = { version = "1.26.0", features = ["sync"] }
thiserror = { version = "1.0.39" }
uuid = { version = "1.3.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
